objects/Ent_Trial__c.object
<CustomObject>
    <description>created as part of DPS-21062 for  omni enterprise trial</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SSD__c</fullName>
        <formula>Opportunity__r.Source_System_Detail__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Trials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bounceback_Alert__c</fullName>
        <label>Bounceback Alert</label>
        <summaryFilterItems>
            <field>Trial_Contact__c.Status__c</field>
            <operation>equals</operation>
            <value>Bounceback</value>
        </summaryFilterItems>
        <summaryForeignKey>Trial_Contact__c.Trials__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>created for ent trial as part of dps-21062</description>
        <label>Campaign Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as  part ent trial</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_to_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Enterprise trials, as part of DPS-21164</description>
        <label>Convert to Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Reason__c</fullName>
        <description>Omni Trial - This will be updated from LWC while doing End Trial DPS-21106</description>
        <label>End Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Incorrect Trial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Purchased</fullName>
                </value>
                <value>
                    <fullName>Trial Abuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlement_Complete__c</fullName>
        <label>Entitlement Completion Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for ent trial as part of dps-21062</description>
        <label>Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Account_Number_Source__c</fullName>
        <label>External Account Number Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Account_Number__c</fullName>
        <label>External Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_code__c</fullName>
        <description>DPS-22959
16- Enterprise Trials - Industry Code Field</description>
        <label>Industry Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Lapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lead_Converted__c</fullName>
        <description>created for ent trial as part of dps-21062</description>
        <formula>Lead__r.Is_Lead_Convert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lead Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Trials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Times_Trial_Reactivated__c</fullName>
        <description>created for ent trial as part of dps-21062</description>
        <label>Num of Times Trial Reactivated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <description>created for ent trial as part of dps-21062</description>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_to_Extend__c</fullName>
        <description>created for ent trial as part of dps-21062</description>
        <label>Number of Days to Extend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_Extended__c</fullName>
        <defaultValue>0</defaultValue>
        <description>created for ent trial as part of dps-21062</description>
        <label>Number of Times Extended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Trials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <description>Omni Trial - Store First Name and Last Name Primary Contact which is selected on Trial Contact</description>
        <label>Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Type__c</fullName>
        <description>Omni Trial -value will be populated from  Primary contact Profile type child object</description>
        <label>Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW_CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>EXISTING_CUSTOMER_NEW_DOMAIN</fullName>
                </value>
                <value>
                    <fullName>EXISTING_CUSTOMER_SAME_DOMAIN</fullName>
                </value>
                <value>
                    <fullName>EXISTING_USER_NEW_DOMAIN</fullName>
                    <isActive>false</isActive>
                    <label>EXISTING_USER_NEW_DOMAIN</label>
                </value>
                <value>
                    <fullName>EXISTING_USER_SAME_DOMAIN</fullName>
                    <isActive>false</isActive>
                    <label>EXISTING_USER_SAME_DOMAIN</label>
                </value>
                <value>
                    <fullName>NET_NEW</fullName>
                    <isActive>false</isActive>
                    <label>NET_NEW</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for ent trial as part of dps-21062</description>
        <label>Reactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DPS-22589 - Enterprise Trials - Instant Entitlement - Temp Trial Field</description>
        <label>Temp Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_NumberofTrial_Contacts__c</fullName>
        <label>Total Number of Trial Contacts</label>
        <summaryForeignKey>Trial_Contact__c.Trials__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Extend_Date__c</fullName>
        <label>Trial Extend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Omni Trial - populate 18 digit Ent Trial Record Id - created for ent trial DPS-21202</description>
        <externalId>true</externalId>
        <label>Trial Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Trial_Source__c</fullName>
        <description>created for ent trial as part of dps-21062</description>
        <label>Trial Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                    <default>true</default>
                    <label>SFDC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Status__c</fullName>
        <label>Trial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Rep Initiated</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Bounceback</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>TimedOut</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Entitlement Error</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Timed Out</fullName>
                    <isActive>false</isActive>
                    <label>Timed Out</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Enterprise Trials</label>
    <nameField>
        <displayFormat>ET-{00000}</displayFormat>
        <label>Trial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enterprise Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Omni_ConvertSales_Quote_Validation</fullName>
        <active>true</active>
        <description>Created as part of JIRA DPS-21221</description>
        <errorConditionFormula>AND(
ISCHANGED( Convert_to_Sale__c )
,
ISPICKVAL( Opportunity__r.Primary_Quote__r.Apttus_Proposal__Approval_Stage__c , &quot;Accepted&quot;)
)</errorConditionFormula>
        <errorMessage>Cannot change Convert to Sale once the Quote is Accepted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Omni_ConvertSales_SSD_Validation</fullName>
        <active>true</active>
        <description>Created as part of DPS-21165.</description>
        <errorConditionFormula>OR(
AND( 
     Convert_to_Sale__c  = TRUE,
     ISPICKVAL( Trial_Status__c , &quot;Expired&quot;),
     Trial_End_Date__c - TODAY() &lt; 60,
     ISBLANK(Opportunity__r.Source_System_Detail__c )

),

AND( 
     Convert_to_Sale__c  = TRUE,
     ISPICKVAL( Trial_Status__c , &quot;Active&quot;),
     ISBLANK(Opportunity__r.Source_System_Detail__c )

  )
)</errorConditionFormula>
        <errorMessage>Please Create SSD on the Opportunity before converting the Trial to Sale.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Omni_ConvertSales_TImeLimit_Validation</fullName>
        <active>true</active>
        <description>Created as part of DPS-21164.</description>
        <errorConditionFormula>AND( 
     Convert_to_Sale__c  = TRUE,
     ISPICKVAL( Trial_Status__c , &quot;Expired&quot;),
     TODAY()- Trial_End_Date__c &gt;60
)</errorConditionFormula>
        <errorMessage>Exceeded Time Limit to Convert Trial to Sale.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Omni_Trial_ConvertSales_Validation</fullName>
        <active>true</active>
        <description>Created as part of DPS-21164.</description>
        <errorConditionFormula>AND( Convert_to_Sale__c  = TRUE,

    OR( 
        ISPICKVAL( Trial_Status__c , &quot;Draft&quot;),
        ISPICKVAL( Trial_Status__c , &quot;Rep Initiated&quot;),
        ISPICKVAL( Trial_Status__c , &quot;Invited&quot;),
        ISPICKVAL( Trial_Status__c , &quot;Bounceback&quot;),
        ISPICKVAL( Trial_Status__c , &quot;Entitlement Error&quot;),
        ISPICKVAL( Trial_Status__c , &quot;TimedOut&quot;),
        ISPICKVAL( Trial_Status__c , &quot;Accepted&quot;)
     )


)</errorConditionFormula>
        <errorMessage>Cannot Convert Trial to Sale. Trial is not Active.</errorMessage>
    </validationRules>
</CustomObject>